<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/app_name_little"
        android:layout_width="188dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu"
        android:layout_width="128dp"
        android:layout_height="373dp"
        android:layout_marginTop="128dp"
        android:background="@android:drawable/edit_text"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nombreMaquina"
        android:layout_width="265dp"
        android:layout_height="27dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/app_name_little" />

    <Button
        android:id="@+id/btn_active_qr"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:text="@string/activar_QR"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/nombreMaquina" />

    <Button
        android:id="@+id/btn_report_incidence"
        android:layout_width="152dp"
        android:layout_height="103dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/comunicar_incidencia"
        app:layout_constraintStart_toEndOf="@+id/btn_active_qr"
        app:layout_constraintTop_toBottomOf="@+id/nombreMaquina" />

    <TextView
        android:id="@+id/ranking"
        android:layout_width="285dp"
        android:layout_height="190dp"
        android:layout_marginTop="108dp"
        android:text="@string/ranking"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/nombreMaquina" />

    <TextView
        android:id="@+id/historico"
        android:layout_width="282dp"
        android:layout_height="288dp"
        android:layout_marginTop="296dp"
        android:text="@string/histórico"
        app:layout_constraintStart_toStartOf="@+id/ranking"
        app:layout_constraintTop_toBottomOf="@+id/nombreMaquina" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/historico" />

</androidx.constraintlayout.widget.ConstraintLayout>